--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,14 @@
   --vscode-highlight-line-highlighted-border-width: 2px; /* default: 2px */
 }
 
+a {
+  box-shadow: none !important;
+}
+
+a:hover {
+  color: #888;
+}
+
 :not(pre)>code {
   position: relative;
   padding: .2em;
