--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,27 +34,11 @@ a:hover {
   border-radius: .3em;
   color: #c92c2c;
   border: 1px solid rgba(0,0,0,.1);
-  display: inline;
   white-space: normal;
   background-color: #fdfdfd;
+  font-family: 'Courier New', Courier, monospace;
   box-sizing: border-box;
   max-height: inherit;
-}
-
-code {
-  font-size: 1em;
-  text-align: left;
-  white-space: pre;
-  word-spacing: normal;
-  word-break: normal;
-  word-wrap: normal;
-  line-height: 1.5;
-  -moz-tab-size: 4;
-  -o-tab-size: 4;
-  tab-size: 4;
-  -webkit-hyphens: none;
-  -ms-hyphens: none;
-  hyphens: none;
 }
 
 .hide-scroll-bars {
