--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,8 +1,7 @@
 @import "./variables";
 
-footer {
+.sub-container {
   margin-top: 50px;
-  height: 300px;
   background-color: $primary-dark;
   color: white;
 }
