--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,6 +7,7 @@
 @import "../../node_modules/bootstrap/scss/close";
 @import "./variables";
 @import "./layout";
+@import "./bio";
 
 .grvsc-container {
   padding-top: var(--grvsc-padding-top, var(--grvsc-padding-v, 1rem));
