--- a/src/components/SocialBadges/SocialBadges.css
+++ b/src/components/SocialBadges/SocialBadges.css
@@ -1,8 +1,8 @@
-.support__socials {
+.social-badges {
   display: block;
   margin-top: 30px;
 }
 
-.support__socials__social {
+.social-badges__social {
   margin-right: 10px;
 }
