chore(blog-meta-img): update blog meta image for autogenerated thumbnails

--- a/src/components/BlogPostItem/BlogPostItem.css
+++ b/src/components/BlogPostItem/BlogPostItem.css
@@ -23,6 +23,7 @@
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.75rem;
+  text-align: center;
   color: inherit;
   font-family: "Merriweather", "Georgia", serif;
   font-weight: 900;
