--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -47,6 +47,10 @@ a:hover {
   opacity: 0.8;
 }
 
+.text-center {
+  text-align: center;
+}
+
 :not(pre) > code {
   position: relative;
   padding: 0.2em;
