chore(gear): add gear page

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,6 +8,7 @@
 @import "./variables";
 @import "./layout";
 @import "./bio";
+@import "./gears";
 
 .grvsc-container {
   padding-top: var(--grvsc-padding-top, var(--grvsc-padding-v, 1rem));
